# globe_geodetic_visualizer

./: CMakeLists.txt  README.md  package.xml
include/globe_geodetic_visualizer/: globe_geodetic_visualizer.h
launch/: visualizer.launch
meshes/: Cessna_172.stl
msg/: GeoTraj.msg
rviz/: ego_centered.rviz  globe_centered.rviz
src/: globe_geodetic_visualizer.cpp  globe_geodetic_visualizer_node.cpp
